syntax = "proto3";

option go_package = "github.com/awadyn/shep_remote_muster";

package muster;

service Pulse {
	rpc HeartBeat (HeartbeatRequest) returns (HeartbeatReply) {}
}

service Log {
	rpc SyncLogBuffers (stream SyncLogRequest) returns (SyncLogReply) {}
}

message HeartbeatRequest {
	uint32 shep_request = 1;
}

message HeartbeatReply {
	uint32 shep_request = 1;
	string muster_reply = 2;
}

message LogEntry {
	repeated uint64 vals = 1;
}

message SyncLogRequest {
	string log_id = 1;
	LogEntry log_entry = 2;
}

message SyncLogReply {
	bool sync_complete = 1;
}




